adding gala recap and photos

--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -95,3 +95,14 @@ footer {
         font-size: 30px !important;
     }
 }
+
+.gallery {
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    &__photo {
+        width: 20%;
+        float: left;
+        padding-right: 10px;
+    }
+}
