--- a/views/index.html
+++ b/views/index.html
@@ -50,13 +50,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#buy-tickets">Tickets</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#sponsorship">Become a Sponsor</a>
                     </li>
                     <li>
                         <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
@@ -73,16 +67,14 @@
         <div class="header__gradient"></div>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">FIDV Young Leaders</div>
-                <div class="intro-heading">Winter Gala</div>
-                <a href="#buy-tickets" class="page-scroll btn btn-xl">Buy Tickets</a>
+                <div class="intro-heading">FIDV Young Leaders</div>
                 <div class="share">
                     <ul class="list-inline social-buttons">
                         <li>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=fidv.org/youngleaders" class="social-buttons__facebook"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/FIDVYL" class="social-buttons__facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="#" class="social-buttons__twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/fidv_youngleaders/" class="social-buttons__twitter" target="_blank"><i class="fa fa-instagram"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -96,51 +88,44 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">FIDV Winter Gala Tickets</h2>
-                    <h3 class="section-subheading text-muted">March 17, 2016 @ <a href="https://www.google.com/maps/place/Tribeca+Rooftop+(Apogee+Events)/@40.7234427,-74.0083491,15z/data=!4m2!3m1!1s0x0:0x445fa1c6e4aa5a38" target="_blank">TriBeCa Rooftop</a></h3>
+                    <h2 class="section-heading">2ND ANNUAL FIDV YOUNG LEADERSHIP GALA RESOUNDING SUCCESS</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8">
-                    <div id="bbox-root"></div>
-                    <script type="text/javascript">
-                           window.bboxInit = function () {
-                               bbox.showForm('e21f71a4-8bce-4bcd-953c-a0c638129b57');
-                           };
-                           (function () {
-                               var e = document.createElement('script'); e.async = true;
-                               e.src = 'https://bbox.blackbaudhosting.com/webforms/bbox-min.js';
-                               document.getElementsByTagName('head')[0].appendChild(e);
-                           } ());
-                    </script>
+                <div class="col-xs-12">
                     <div class="more-info">
-                        <p>Though it's been over one year since Operation Protective Edge, the lives of thousands of soldiers wounded in battle have changed forever. They have been seriously injured, and now they face a daily struggle with the difficult rehabilitation process, which for many will be a life-long battle.</p>
+                        <p>The 2 nd Annual FIDV Young Leadership Gala on March 17 brought together over 500 guests to learn about Friends of Israel Disabled Veterans and the Beit Halochem rehabilitations centers we support in Israel. It was a resounding success. Guests had the opportunity to hear from one disabled veteran helped by Beit Halochem, <strong>Izzy Ezagui</strong>, who spoke from the heart about his personal experience in the IDF and with Beit Halochem.</p>
 
-                        <p>Please join us as we honor these brave soldiers on <strong>Thursday, March 17th at TriBeCa Rooftop</strong>, for the 2nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
+                        <p>The Gala Committee, Co-Chaired by Michael Shmuely and Jacob Kent, held a successful silent auction, led by Jacob Pereg, and raised $125,000 overall. The Winter Gala was the most successful fundraiser and outreach event so far; the FIDV Young Leadership is planning a series of additional activities in 2016. It took many hands to make the 2nd Annual FIDV Young Leadership Gala work, and FIDV thanks each one of you for helping to make this such a success.</p>
 
-                        <p>At our Beit Halochem rehabilitation centers in Jerusalem, Tel Aviv, Haifa, and Be’er Sheva, we provide a broad range of personalized services and therapies for more than 51,000 disabled veterans and terror victims. The Beit Halochem centers offer a healing community of those who have "been there." They help each other meet and overcome the challenges of disability, on the social, physical and psychological levels. FIDV-Beit Halochem does it all!</p>
-                    </div>
-                    <div class="more-info">
-                        <p class="section-subheading text-muted">For more information please contact:</p>
-                        <h4>Ella Levine</h4>
-                        <p>212-689 3220<br><a href="mailto:elevine@fidv.org">elevine@fidv.org</a></p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="google-maps">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12095.013987948734!2d-74.0083491!3d40.7234427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x445fa1c6e4aa5a38!2sTribeca+Rooftop+(Apogee+Events)!5e0!3m2!1sen!2sus!4v1446927164753" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
-                    <h3>FIDV Winter Gala</h3>
-                    <address>
-                        <strong>TriBeCa Rooftop</strong><br>
-                        2 Desbrosses St.<br>
-                        New York, NY 10013<br>
-                    </address>
+                        <p>The creative determination of so many people resulted in a spectacular evening for FIDV. The monies raised will support the rehabilitation of Israel’s disabled veterans and victims of terror attacks. Thanks to this young leadership many people in Israel will be helped. Everyone at FIDV-Beit Halochem is looking forward to building on the Gala, to spreading the word, reaching out to the broader Jewish community, and to changing our heroes’ lives for the better.</p>
 
-                    <div class="row board">
-                        <div class="col-xs-12">
-                            <a class="fancybox" href="img/winter_gala_march_large.jpg">
-                                <img src="img/winter_gala_march_small.jpg" alt="" class="img-responsive center-block"/>
+                        <p>We are grateful for the support of our Board: Michael Leichtling (FIDV Chair), Sheldon Pickholz, Barbara Lissner, Mark Porat, Meir Greenberg, Marc Itzkowitch, and Bruce Slovin.</p>
+                    </div>
+                    <div class="gallery">
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala1.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala1.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala2.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala2.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala3.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala3.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala4.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala4.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala5.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala5.jpg" class="img-responsive">
                             </a>
                         </div>
                     </div>
@@ -163,24 +148,6 @@
             </div>
         </div>
     </section>
-
-<!-- Sponsorship Section -->
-    <section id="sponsorship">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="section-heading text-center">Become a Sponsor</h2>
-                    <br>
-                    <img src="img/gala-sponsors-small.jpg" class="img-responsive center-block">
-                    <br><br>
-                    <div class="text-center">
-                        <a href="img/gala-sponsors.pdf" class="btn btn-primary btn-lg" target="_blank">Download PDF</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <footer>
         <div class="container">
