2018 winter gala first update (#1)
* dev-update-2018 updating backgroud opacity

* dev-update-2018 adding buy tickets content

--- a/views/index.html
+++ b/views/index.html
@@ -50,6 +50,12 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#buy-tickets">Tickets</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#past-event-2">Past Events</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
@@ -67,7 +73,9 @@
         <div class="header__gradient"></div>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">FIDV Young Leaders</div>
+                <div class="intro-lead-in">FIDV Young Leaders</div>
+                <div class="intro-heading">4th Annual Winter Gala</div>
+                    <a href="#buy-tickets" class="page-scroll btn btn-xl">Buy Tickets</a>
                 <div class="share">
                     <ul class="list-inline social-buttons">
                         <li>
@@ -82,9 +90,105 @@
         </div>
     </header>
 
+    <section id="buy-tickets">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2 class="section-heading">Buy Tickets</h2>
+                </div>
+                <div class="col-xs-12 col-md-8">
+
+                    <div class="more-info">
+                        <div id="bbox-root"></div>
+
+                        <script type="text/javascript">
+
+                               window.bboxInit = function () {
+
+                                   bbox.showForm('0f9c4915-0223-4c5d-ad27-d7180aa0413c');
+
+                               };
+
+                               (function () {
+
+                                   var e = document.createElement('script'); e.async = true;
+
+                                   e.src = 'https://bbox.blackbaudhosting.com/webforms/bbox-min.js';
+
+                                   document.getElementsByTagName('head')[0].appendChild(e);
+
+                               } ());
+
+                        </script>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="more-info">
+                        <p>
+                            <strong>Date:</strong> Saturday, March 10, 2018<br>
+                            <strong>Time:</strong> 9pm - 2am<br>
+                            <strong>Location:</strong> The Lighthouse @ Chelsea Piers
+                        </p>
+
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.649880937922!2d-74.01262368423055!3d40.74772897932803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259c7bc5a5be5%3A0x7eb3ed84c42c3ed6!2sThe+Lighthouse!5e0!3m2!1sen!2sus!4v1514937571010" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="past-event-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">3ND ANNUAL FIDV YOUNG LEADERSHIP GALA RESOUNDING SUCCESS</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="more-info">
+                        <p>The 3rd Annual FIDV Young Leadership Gala on March 17 brought together over 500 guests to learn about Friends of Israel Disabled Veterans and the Beit Halochem rehabilitations centers we support in Israel. It was a resounding success. Guests had the opportunity to hear from one disabled veteran helped by Beit Halochem, <strong>Izzy Ezagui</strong>, who spoke from the heart about his personal experience in the IDF and with Beit Halochem.</p>
+
+                        <p>The Gala Committee, Co-Chaired by Michael Shmuely and Jacob Kent, held a successful silent auction, led by Jacob Pereg, and raised $125,000 overall. The Winter Gala was the most successful fundraiser and outreach event so far; the FIDV Young Leadership is planning a series of additional activities in 2016. It took many hands to make the 3nd Annual FIDV Young Leadership Gala work, and FIDV thanks each one of you for helping to make this such a success.</p>
+
+                        <p>The creative determination of so many people resulted in a spectacular evening for FIDV. The monies raised will support the rehabilitation of Israel’s disabled veterans and victims of terror attacks. Thanks to this young leadership many people in Israel will be helped. Everyone at FIDV-Beit Halochem is looking forward to building on the Gala, to spreading the word, reaching out to the broader Jewish community, and to changing our heroes’ lives for the better.</p>
+
+                        <p>We are grateful for the support of our Board: Michael Leichtling (FIDV Chair), Sheldon Pickholz, Barbara Lissner, Mark Porat, Meir Greenberg, Marc Itzkowitch, and Bruce Slovin.</p>
+                    </div>
+                    <div class="gallery">
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala1.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala1.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala2.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala2.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala3.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala3.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala4.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala4.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                        <div class="gallery__photo">
+                            <a href="img/gala-images/gala5.jpg" class="fancybox" rel="gallery">
+                                <img src="img/gala-images/thumbs/gala5.jpg" class="img-responsive">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Services Section -->
-    <section id="buy-tickets">
+    <section id="past-event-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -94,7 +198,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="more-info">
-                        <p>The 2 nd Annual FIDV Young Leadership Gala on March 17 brought together over 500 guests to learn about Friends of Israel Disabled Veterans and the Beit Halochem rehabilitations centers we support in Israel. It was a resounding success. Guests had the opportunity to hear from one disabled veteran helped by Beit Halochem, <strong>Izzy Ezagui</strong>, who spoke from the heart about his personal experience in the IDF and with Beit Halochem.</p>
+                        <p>The 2nd Annual FIDV Young Leadership Gala on March 17 brought together over 500 guests to learn about Friends of Israel Disabled Veterans and the Beit Halochem rehabilitations centers we support in Israel. It was a resounding success. Guests had the opportunity to hear from one disabled veteran helped by Beit Halochem, <strong>Izzy Ezagui</strong>, who spoke from the heart about his personal experience in the IDF and with Beit Halochem.</p>
 
                         <p>The Gala Committee, Co-Chaired by Michael Shmuely and Jacob Kent, held a successful silent auction, led by Jacob Pereg, and raised $125,000 overall. The Winter Gala was the most successful fundraiser and outreach event so far; the FIDV Young Leadership is planning a series of additional activities in 2016. It took many hands to make the 2nd Annual FIDV Young Leadership Gala work, and FIDV thanks each one of you for helping to make this such a success.</p>
 
