Dev update shmuely 2018 (#2)
* dev-update-shmuely-2018 adding fb share image

* dev-update-shmuely-2018 updating hero text styles

* dev-update-shmuely-2018 hide blackbaud form heading

* dev-update-shmuely-2018 updating text

* dev-update-shmuely-2018 updates to the donate page

--- a/src/stylesheets/less/agency.less
+++ b/src/stylesheets/less/agency.less
@@ -194,6 +194,11 @@ header {
             font-size: 22px;
             line-height: 22px;
             margin-bottom: 25px;
+
+            &.intro-lead-in--celebrating {
+                margin-bottom: 50px;
+                font-size: normal;
+            }
         }
         .intro-heading {
             .heading-font;
@@ -216,13 +221,13 @@ header {
                 font-size: 40px;
                 line-height: 40px;
                 margin-bottom: 25px;
+
             }
             .intro-heading {
                 .heading-font;
                 font-weight: 700;
                 font-size: 75px;
                 line-height: 75px;
-                margin-bottom: 50px;
             }
         }
     }
