--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="Friends of Israeli Disabled Veterans Young Leaders"/>
     <meta property="og:url" content="https://fidv.org/youngleaders/" />
     <meta property="og:description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
-    <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.png" />
+    <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.jpg" />
 
     <link rel="canonical" href="https://fidv.org/youngleaders/" />
 
@@ -53,10 +53,10 @@
                         <a class="page-scroll" href="#buy-tickets">Tickets</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#past-event-2">Past Events</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#past-event-2">Past Events</a>
                     </li>
                     <li>
                         <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
@@ -75,7 +75,8 @@
             <div class="intro-text">
                 <div class="intro-lead-in">FIDV Young Leaders</div>
                 <div class="intro-heading">4th Annual Winter Gala</div>
-                    <a href="#buy-tickets" class="page-scroll btn btn-xl">Buy Tickets</a>
+                <div class="intro-lead-in intro-lead-in--celebrating">Celebrating Israel at 70</div>
+                <a href="#buy-tickets" class="page-scroll btn btn-xl">Buy Tickets</a>
                 <div class="share">
                     <ul class="list-inline social-buttons">
                         <li>
@@ -95,6 +96,8 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h2 class="section-heading">Buy Tickets</h2>
+                    <p>Come join us for a night of dancing and live music at The Lighthouse at Chelsea Piers! Open bar, sushi and dessert served all night!</p>
+                    <p>100% of the proceeds benefit Israel's wounded soldiers and victims of terror.</p>
                 </div>
                 <div class="col-xs-12 col-md-8">
 
@@ -124,14 +127,42 @@
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <div class="more-info">
+                        <h4 class="section-heading">Event Info</h2>
                         <p>
                             <strong>Date:</strong> Saturday, March 10, 2018<br>
-                            <strong>Time:</strong> 9pm - 2am<br>
-                            <strong>Location:</strong> The Lighthouse @ Chelsea Piers
+                            <strong>Time:</strong> 9:30pm - 2:30am<br>
+                            <strong>Location:</strong> The Lighthouse @ Chelsea Piers<br>
+                            <strong>Attire:</strong> Cocktial Chic<br>
                         </p>
 
+                        <br>
+
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.649880937922!2d-74.01262368423055!3d40.74772897932803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259c7bc5a5be5%3A0x7eb3ed84c42c3ed6!2sThe+Lighthouse!5e0!3m2!1sen!2sus!4v1514937571010" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                        <br>
+                        <br>
+
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h4 class="section-heading">Thank you to our sponsors!</h2>
+                            </div>
+                        </div>
+
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="section-heading text-center">About FIDV</h2>
+                    <p>The men and women of the Israel Defense Forces serve their country with courage. The debt of gratitude the Jewish world owes them is inestimable. As well, we owe much to the courageous Israelis who, by living in Israel, secure this tiny land for all Jews.</p>
+
+                    <p>Friends of Israel Disabled Veterans (FIDV) and Beit Halochem are committed to caring for Israeli servicemen and women disabled in the line of duty. Beit Halochem centers provide therapeutic, sports and recreational facilities to help them resume lives of purpose and dignity.</p>
                 </div>
             </div>
         </div>
@@ -141,7 +172,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">3ND ANNUAL FIDV YOUNG LEADERSHIP GALA RESOUNDING SUCCESS</h2>
+                    <h2 class="section-heading">FIDV Fall Kickoff</h2>
                 </div>
             </div>
             <div class="row">
@@ -187,20 +218,19 @@
         </div>
     </section>
 
-    <!-- Services Section -->
     <section id="past-event-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">2ND ANNUAL FIDV YOUNG LEADERSHIP GALA RESOUNDING SUCCESS</h2>
+                    <h2 class="section-heading">3ND ANNUAL FIDV YOUNG LEADERSHIP GALA RESOUNDING SUCCESS</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="more-info">
-                        <p>The 2nd Annual FIDV Young Leadership Gala on March 17 brought together over 500 guests to learn about Friends of Israel Disabled Veterans and the Beit Halochem rehabilitations centers we support in Israel. It was a resounding success. Guests had the opportunity to hear from one disabled veteran helped by Beit Halochem, <strong>Izzy Ezagui</strong>, who spoke from the heart about his personal experience in the IDF and with Beit Halochem.</p>
+                        <p>The 3rd Annual FIDV Young Leadership Gala on March 17 brought together over 500 guests to learn about Friends of Israel Disabled Veterans and the Beit Halochem rehabilitations centers we support in Israel. It was a resounding success. Guests had the opportunity to hear from one disabled veteran helped by Beit Halochem, <strong>Izzy Ezagui</strong>, who spoke from the heart about his personal experience in the IDF and with Beit Halochem.</p>
 
-                        <p>The Gala Committee, Co-Chaired by Michael Shmuely and Jacob Kent, held a successful silent auction, led by Jacob Pereg, and raised $125,000 overall. The Winter Gala was the most successful fundraiser and outreach event so far; the FIDV Young Leadership is planning a series of additional activities in 2016. It took many hands to make the 2nd Annual FIDV Young Leadership Gala work, and FIDV thanks each one of you for helping to make this such a success.</p>
+                        <p>The Gala Committee, Co-Chaired by Michael Shmuely and Jacob Kent, held a successful silent auction, led by Jacob Pereg, and raised $125,000 overall. The Winter Gala was the most successful fundraiser and outreach event so far; the FIDV Young Leadership is planning a series of additional activities in 2016. It took many hands to make the 3nd Annual FIDV Young Leadership Gala work, and FIDV thanks each one of you for helping to make this such a success.</p>
 
                         <p>The creative determination of so many people resulted in a spectacular evening for FIDV. The monies raised will support the rehabilitation of Israel’s disabled veterans and victims of terror attacks. Thanks to this young leadership many people in Israel will be helped. Everyone at FIDV-Beit Halochem is looking forward to building on the Gala, to spreading the word, reaching out to the broader Jewish community, and to changing our heroes’ lives for the better.</p>
 
@@ -233,21 +263,6 @@
                             </a>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="section-heading text-center">About FIDV</h2>
-                    <p>The men and women of the Israel Defense Forces serve their country with courage. The debt of gratitude the Jewish world owes them is inestimable. As well, we owe much to the courageous Israelis who, by living in Israel, secure this tiny land for all Jews.</p>
-
-                    <p>Friends of Israel Disabled Veterans (FIDV) and Beit Halochem are committed to caring for Israeli servicemen and women disabled in the line of duty. Beit Halochem centers provide therapeutic, sports and recreational facilities to help them resume lives of purpose and dignity.</p>
                 </div>
             </div>
         </div>
