--- a/views/donate.html
+++ b/views/donate.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="Friends of Israeli Disabled Veterans Young Leaders"/>
     <meta property="og:url" content="https://fidv.org/youngleaders/" />
     <meta property="og:description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
-    <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.png" />
+    <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.jpg" />
 
     <link rel="canonical" href="https://fidv.org/youngleaders/" />
 
@@ -53,7 +53,13 @@
                         <a class="page-scroll" href="/youngleaders#buy-tickets">Tickets</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="/youngleaders#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/youngleaders#past-event-2">Past Events</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
                     </li>
                 </ul>
             </div>
@@ -88,7 +94,7 @@
                     <div class="more-info">
                         <p>Though it's been over one year since Operation Protective Edge, the lives of thousands of soldiers wounded in battle have changed forever. They have been seriously injured, and now they face a daily struggle with the difficult rehabilitation process, which for many will be a life-long battle.</p>
 
-                        <p>Please join us as we honor these brave soldiers on <strong>Thursday, March 17th at TriBeCa Rooftop</strong>, for the 2nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
+                        <p>Please join us as we honor these brave soldiers on <strong>Saturday, March 10th at The Lighthouse at Chelsea Piers</strong>, for the 4nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
 
                         <p>At our Beit Halochem rehabilitation centers in Jerusalem, Tel Aviv, Haifa, and Be’er Sheva, we provide a broad range of personalized services and therapies for more than 51,000 disabled veterans and terror victims. The Beit Halochem centers offer a healing community of those who have "been there." They help each other meet and overcome the challenges of disability, on the social, physical and psychological levels. FIDV-Beit Halochem does it all!</p>
                     </div>
