--- a/views/donate/index.html
+++ b/views/donate/index.html
@@ -15,6 +15,8 @@
 
     <link rel="canonical" href="https://fidv.org/youngleaders/" />
 
+    <link rel="shortcut icon" href="https://fidv.org/youngleaders/img/favicon.ico">
+
     <link rel="stylesheet" type="text/css" href="./build/1.0.0/css/style.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -92,7 +94,7 @@
                            } ());
                     </script>
                     <div class="more-info">
-                        <p>Though it's been over one year since Operation Protective Edge, the lives of thousands of soldiers wounded in battle have changed forever. They have been seriously injured, and now they face a daily struggle with the difficult rehabilitation process, which for many will be a life-long battle.</p>
+                        <p>Though it's been years since Operation Protective Edge, the lives of thousands of soldiers wounded in battle have changed forever. They have been seriously injured, and now they face a daily struggle with the difficult rehabilitation process, which for many will be a life-long battle.</p>
 
                         <p>Please join us as we honor these brave soldiers on <strong>Saturday, March 10th at The Lighthouse at Chelsea Piers</strong>, for the 4nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
 
@@ -107,8 +109,8 @@
                 <div class="col-md-4">
                     <div class="row board">
                         <div class="col-xs-12">
-                            <a class="fancybox" href="../img/winter_gala_march_large.jpg">
-                                <img src="../img/winter_gala_march_small.jpg" alt="" class="img-responsive center-block"/>
+                            <a class="fancybox" href="https://fidv.org/youngleaders/img/save-the-date-2018.jpg">
+                                <img src="https://fidv.org/youngleaders/img/save-the-date-2018.jpg" alt="" class="img-responsive center-block"/>
                             </a>
                         </div>
                     </div>
@@ -117,16 +119,21 @@
         </div>
     </section>
 
-
     <!-- About Section -->
     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="section-heading text-center">About FIDV</h2>
-                    <p>The men and women of the Israel Defense Forces serve their country with courage. The debt of gratitude the Jewish world owes them is inestimable. As well, we owe much to the courageous Israelis who, by living in Israel, secure this tiny land for all Jews.</p>
-
-                    <p>Friends of Israel Disabled Veterans (FIDV) and Beit Halochem are committed to caring for Israeli servicemen and women disabled in the line of duty. Beit Halochem centers provide therapeutic, sports and recreational facilities to help them resume lives of purpose and dignity.</p>
+                    <p>The mission of FIDV-Beit Halochem (House of the Warriors) is to care for Israeli servicemen and women wounded in the line of duty who are now disabled. At our state-of-the-art rehabilitation centers in Tel Aviv, Haifa, Jerusalem and Beer Sheva we serve more than 51,000 disabled veterans and family members. We raise awareness and funds for a broad range of social, cultural and sports training programs, offer scholarships, develop new initiatives, and provide specialized equipment for the centers. We help empower them to rebuild their lives.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 about-video">
+                    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/GodYwnCH-SE' frameborder='0' allowfullscreen></iframe></div>
+                </div>
+                <div class="col-sm-6 about-video">
+                    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/-1ZrQK_nXe8' frameborder='0' allowfullscreen></iframe></div>
                 </div>
             </div>
         </div>
@@ -136,7 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; <a href="https://fidv.org" target="_blank">fidv.org</a> 2016</span>
+                    <span class="copyright">Copyright &copy; <a href="https://fidv.org" target="_blank">fidv.org</a> 2018</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
